--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semangat michelle</title>
+    <title>Semangat mas azam</title>
     <link rel="stylesheet" href="style.css"/>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="script.js"></script>
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div class="card-inside">
-    <div class="wishes">Maaf yaaaaah pinkan pliss</div>
+    <div class="wishes">Maaf yaaaaah mas azam wkwk</div>
     <div class="easter-eggs">
       <div class="eggs"></div>
       <div class="basket"></div>
